--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -13,4 +13,5 @@
 @import "sections/_headding";
 @import "sections/_servis-description";
 @import "sections/_package";
+@import "sections/_footer";
 
