--- a/docs/less/sections/_package.less
+++ b/docs/less/sections/_package.less
@@ -109,12 +109,12 @@
 	cursor: pointer;
 
 	&:hover, &:active, &:focus{
-		background-color: #ffc80a;
+		background-color: @orange;
 		color: #fff;
 	}
 }
 .button--orange{
-	background-color: #ffc80a;
+	background-color: @orange;
 	&:hover, &:active, &:focus{
 		background-color: #ffe400;
 		color: #000;
