--- a/docs/less/sections/_headding.less
+++ b/docs/less/sections/_headding.less
@@ -27,7 +27,7 @@
 		padding-left: 8px;
 		height: 26px;
 		width: 26px;
-		background-color: #ffc80a;
+		background-color: @orange;
 		color: #fff;
 		font-size: 16px;
 		font-weight: 700;
