--- a/docs/less/sections/_logo.less
+++ b/docs/less/sections/_logo.less
@@ -1,8 +1,14 @@
 .logo{
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 80px;
 	padding-bottom: 40px;
-}
+
+	@media only screen and (min-width : 992px) {
+		padding-top: 30px;
+	}
+
+	}
+
 .logo__name{
 	font-size: 33px;
 	line-height: 1.5;
