--- a/docs/less/sections/_navigation.less
+++ b/docs/less/sections/_navigation.less
@@ -7,12 +7,19 @@
 	text-transform: uppercase;
 	box-shadow: 0px 5px 10px 0px rgba(42, 73, 109, 1);
 	z-index: 2;
-	position: relative;
+	position: fixed;
+	top:0;
+	left: 0;
+	right: 0;
 	
-	@media only screen and (min-width : 768px) {
+	@media only screen and (min-width : 992px) {
 				background-color: #38383a;
 				padding-top: 22px;
 				padding-bottom: 22px;
+
+			}
+	@media only screen and (min-width : 992px) {
+				position: relative;
 
 			}
 	
@@ -22,7 +29,7 @@
 			padding: 0;
 			list-style: none;
 			justify-content: space-between;
-			@media only screen and (min-width : 768px) {
+			@media only screen and (min-width : 992px) {
 				display: flex;
 				
 			}
@@ -34,7 +41,7 @@
 			&.active{
 				color: #ffcc00;
 			}
-			@media (min-width: 768px) {
+			@media (min-width: 992px) {
 			border-bottom: none;
 			padding: 0;
 			}
@@ -53,7 +60,7 @@
 			&.active, &:hover{
 				color: #ffcc00;
 			}
-			@media (min-width: 768px) {
+			@media (min-width: 992px) {
 				padding: 0;
 				display: inline;
 			}
@@ -84,7 +91,7 @@
 			background-color: #16385f;
 		}
 	
-	@media only screen and (min-width : 768px) {
+	@media only screen and (min-width : 992px) {
 		display: none;
 	}
 }
@@ -97,13 +104,13 @@
 	width: 100%;
 	
 	
-	@media (min-width: 768px){
+	@media (min-width: 992px){
 		padding-left: 15px;
 		padding-right: 15px;
-		width: 767px;
+		width: 976px;
 	}
 
 	@media (min-width: 1170px){
-		width: 1170px;
+		width: 1154px;
 	}
 }
